@@ -1,3 +1,9 @@
+2024-04-19T16:22:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8756645616 # 391
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
+* notice: query file size: 24497
+* notice: accum prev / next / diff: re vi: 0 286 / 0 289 / +0 +3
+
 2024-04-19T12:30:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8753563313 # 390
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
